UCF-APR2.4/ftr main/force-app/main/default/objects/Contract_Template_List__c/Contract_Template_List__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contract_Template_List for CLM</description>
    <label>Contract_Template_List</label>
</CustomObject>