UCF-APR2.4/ftr main/force-app/main/default/objects/Contract_Template_List__c/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <description>Agreement Type for CLM</description>
    <label>Agreement Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>