UCF-APR2.4/ftr main/force-app/main/default/objects/Contract_Template_List__c/fields/Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Type__c</fullName>
    <description>Template Schedule Type for CLM</description>
    <label>Schedule Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>