UCF-APR2.4/ftr main/force-app/main/default/objects/Contract_Template_List__c/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <description>Template Name for CLM. This template should exist in Document Template (vlocity_cmt__DocumentTemplateId__c)</description>
    <label>Template Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>