UCF-APR2.4/ftr main/force-app/main/default/objects/Contract_Template_List__c/listViews/All_Records.listView-meta.xml
<ListView>
    <fullName>All_Records</fullName>
    <columns>NAME</columns>
    <columns>Agreement_Type__c</columns>
    <columns>Schedule_Type__c</columns>
    <columns>Template_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>